--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "license": "MIT",
   "devDependencies": {
     "@types/chance": "^1.1.0",
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
     "@types/fs-extra": "^9.0.1",
     "@types/jest": "^26.0.9",
     "@types/lodash": "^4.14.159",
     "@types/node": "^14.0.27",
+    "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "chance": "^1.1.6",
     "cors": "^2.8.5",
@@ -28,6 +30,7 @@
   "dependencies": {
     "ajv": "^6.12.3",
     "express": "^4.17.1",
+    "form-data": "^3.0.0",
     "fs-extra": "^9.0.1",
     "lodash": "^4.17.19",
     "queue": "^6.0.1"
