--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Dario Sechi",
   "license": "MIT",
   "devDependencies": {
+    "@queelag/telegram-types": "^1.0.1",
     "@types/chance": "^1.1.0",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
@@ -19,7 +20,6 @@
     "dotenv": "^8.2.0",
     "dts-bundle": "^0.7.3",
     "jest": "^26.2.2",
-    "telegram-typings": "^4.0.0-beta",
     "terser-webpack-plugin": "^4.0.0",
     "ts-jest": "^26.1.4",
     "ts-loader": "^8.0.2",
@@ -30,6 +30,7 @@
   "dependencies": {
     "ajv": "^6.12.3",
     "express": "^4.17.1",
+    "file-type": "^15.0.0",
     "form-data": "^3.0.0",
     "fs-extra": "^9.0.1",
     "lodash": "^4.17.19",
