--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "chance": "^1.1.7",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "dts-bundle": "^0.7.3",
+    "dts-bundle-generator": "^5.4.0",
     "express": "^4.17.1",
     "jest": "^26.4.2",
     "terser-webpack-plugin": "^4.1.0",
@@ -40,7 +40,7 @@
     "build": "rm -rf dist && rm -rf declarations && yarn webpack && cd ..",
     "test": "yarn jest index",
     "tarball": "yarn version && cp package.json dist/. && cd dist && yarn pack",
-    "dts": "yarn dts-bundle --name @queelag/telegram --main declarations/index.d.ts && mv declarations/@queelag/telegram.d.ts dist/index.d.ts",
+    "dts": "yarn dts-bundle-generator declarations/index.d.ts -o dist/index.d.ts",
     "deploy": "yarn test && MODE=PRODUCTION yarn build && yarn dts && yarn tarball && yarn publish dist/*.tgz --access public && git push"
   }
 }
