--- a/package.json
+++ b/package.json
@@ -3,29 +3,28 @@
   "dependencies": {
     "file-type": "^16.3.0",
     "form-data": "^4.0.0",
-    "fs-extra": "^9.1.0",
+    "fs-extra": "^10.0.0",
     "lodash": "^4.17.21",
     "queue": "^6.0.2"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.14.0",
-    "@queelag/telegram-types": "^1.1.4",
     "@types/chance": "^1.1.1",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/fs-extra": "^9.0.11",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^27.0.2",
     "@types/lodash": "^4.14.168",
-    "@types/node": "^15.0.1",
-    "axios": "^0.21.1",
+    "@types/node": "^16.11.2",
+    "axios": "^0.23.0",
     "body-parser": "^1.19.0",
     "chance": "^1.1.7",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "jest": "^26.6.3",
+    "jest": "^27.3.1",
     "terser-webpack-plugin": "^5.1.1",
-    "ts-jest": "^26.5.5",
+    "ts-jest": "^27.0.7",
     "ts-loader": "^9.1.1",
     "typescript": "^4.2.4",
     "webpack": "^5.36.1",
@@ -34,6 +33,9 @@
   "license": "MIT",
   "main": "index.js",
   "name": "@queelag/telegram",
+  "peerDependencies": {
+    "@queelag/telegram-types": ">= 1.0.0"
+  },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   },
@@ -45,5 +47,5 @@
     "dts": "yarn api-extractor run --local",
     "deploy": "yarn test && MODE=PRODUCTION yarn build && yarn dts && yarn tarball && yarn publish dist/*.tgz --access public && git push"
   },
-  "version": "1.6.8"
+  "version": "1.7.0"
 }
