--- a/package.json
+++ b/package.json
@@ -23,12 +23,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jest": "^27.3.1",
-    "terser-webpack-plugin": "^5.1.1",
     "ts-jest": "^27.0.7",
-    "ts-loader": "^9.1.1",
-    "typescript": "^4.2.4",
-    "webpack": "^5.36.1",
-    "webpack-cli": "^4.6.0"
+    "typescript": "^4.2.4"
   },
   "license": "MIT",
   "main": "index.js",
@@ -41,11 +37,11 @@
   },
   "scripts": {
     "start": "node dist/index.js",
-    "build": "rm -rf dist && rm -rf declarations && yarn webpack && cd ..",
+    "build": "rm -rf dist && rm -rf declarations && yarn tsc && cd ..",
     "test": "yarn jest index",
     "tarball": "yarn version && cp package.json dist/. && cd dist && yarn pack",
     "dts": "yarn api-extractor run --local",
-    "deploy": "yarn test && MODE=PRODUCTION yarn build && yarn dts && yarn tarball && yarn publish dist/*.tgz --access public && git push"
+    "deploy": "yarn test && yarn build && yarn dts && yarn tarball && yarn publish dist/*.tgz --access public && git push"
   },
   "version": "1.7.0"
 }
