--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "build": "rm -rf dist && yarn tsc && yarn api-extractor run --local",
     "test": "yarn jest index",
     "tarball": "yarn version && cp package.json dist/. && cd dist && yarn pack",
-    "deploy": "yarn test && yarn build && yarn dts && yarn tarball && yarn publish dist/*.tgz --access public && git push"
+    "deploy": "yarn test && yarn build && yarn tarball && yarn publish dist/*.tgz && git push"
   },
-  "version": "1.7.3"
+  "version": "1.7.4"
 }
