--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "moduleResolution": "node",
     "outDir": "dist",
     "resolveJsonModule": true,
-    "strict": false,
+    "strict": true,
     "target": "ESNext"
   },
   "include": ["src"]
