--- a/package.json
+++ b/package.json
@@ -1,40 +1,27 @@
 {
   "author": "Dario Sechi",
-  "dependencies": {
-    "file-type": "^17.1.1"
-  },
   "devDependencies": {
-    "@microsoft/api-extractor": "^7.24.0",
-    "@queelag/core": "^1.0.80",
-    "@types/chance": "^1.1.1",
-    "@types/cors": "^2.8.10",
-    "@types/express": "^4.17.11",
-    "@types/jest": "^27.5.1",
-    "@types/node": "^17.0.34",
-    "body-parser": "^1.20.0",
-    "chance": "^1.1.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "jest": "^28.1.0",
-    "ts-jest": "^28.0.2",
-    "typescript": "^4.6.4"
+    "@microsoft/api-extractor": "^7.33.5",
+    "@queelag/core": "^1.1.12",
+    "@queelag/telegram-bot-types": "^1.2.0",
+    "@vitest/coverage-c8": "^0.24.5",
+    "@vitest/ui": "^0.24.5",
+    "dotenv": "^16.0.3",
+    "fastify": "^4.9.2",
+    "typescript": "^4.8.4",
+    "vitest": "^0.24.5"
   },
   "license": "MIT",
   "main": "index.js",
-  "name": "@queelag/telegram",
+  "name": "@queelag/telegram-bot",
   "peerDependencies": {
-    "@queelag/core": ">= 1.0.0",
-    "@queelag/telegram-types": ">= 1.0.0"
-  },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "@queelag/core": ">= 1.1.12",
+    "@queelag/telegram-bot-types": ">= 1.2.0"
   },
   "scripts": {
-    "start": "node dist/index.js",
+    "test": "yarn vitest run",
     "build": "rm -rf dist && yarn tsc && yarn api-extractor run --local",
-    "test": "yarn jest index",
-    "tarball": "yarn version && cp package.json dist/. && cd dist && yarn pack",
+    "tarball": "yarn version && cp package.json README.md dist/. && cd dist && yarn pack",
     "deploy": "yarn test && yarn build && yarn tarball && yarn publish dist/*.tgz && git push"
   },
   "version": "1.8.3"
