--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "test": "yarn vitest run",
     "build": "rm -rf dist && yarn tsc && yarn api-extractor run --local",
-    "tarball": "yarn version && cp package.json README.md dist/. && cd dist && yarn pack",
+    "tarball": "yarn version && cp LICENSE package.json README.md dist/. && cd dist && yarn pack",
     "deploy": "yarn test && yarn build && yarn tarball && yarn publish dist/*.tgz && git push"
   },
   "version": "1.9.0"
