--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "author": "Dario Sechi",
   "devDependencies": {
+    "@aracna/core": "^1.1.12",
+    "@aracna/telegram-bot-types": "^1.2.0",
     "@microsoft/api-extractor": "^7.33.5",
-    "@queelag/core": "^1.1.12",
-    "@queelag/telegram-bot-types": "^1.2.0",
     "@vitest/coverage-c8": "^0.24.5",
     "@vitest/ui": "^0.24.5",
     "dotenv": "^16.0.3",
@@ -13,10 +13,10 @@
   },
   "license": "MIT",
   "main": "index.js",
-  "name": "@queelag/telegram-bot",
+  "name": "@aracna/telegram-bot",
   "peerDependencies": {
-    "@queelag/core": ">= 1.1.12",
-    "@queelag/telegram-bot-types": ">= 1.2.0"
+    "@aracna/core": ">= 1.1.12",
+    "@aracna/telegram-bot-types": ">= 1.2.0"
   },
   "scripts": {
     "test": "yarn vitest run",
@@ -24,5 +24,5 @@
     "tarball": "yarn version && cp LICENSE package.json README.md dist/. && cd dist && yarn pack",
     "deploy": "yarn test && yarn build && yarn tarball && yarn publish dist/*.tgz && git push"
   },
-  "version": "1.9.2"
+  "version": "1.9.3"
 }
