--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.organization=queelag
-sonar.projectKey=queelag_telegram-bot
+sonar.organization=aracna
+sonar.projectKey=aracna_telegram-bot
 
 sonar.inclusions=src/**/*
 sonar.test.inclusions=tests/**/*
