--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "@aracna/core": "^1.1.41",
     "@aracna/telegram-bot-types": "^1.2.4",
     "@microsoft/api-extractor": "^7.36.4",
-    "@vitest/coverage-c8": "^0.33.0",
     "@vitest/ui": "^0.34.2",
     "dotenv": "^16.3.1",
     "fastify": "^4.21.0",
@@ -24,5 +23,8 @@
     "tarball": "yarn version && cp LICENSE package.json README.md dist/. && cd dist && yarn pack",
     "deploy": "yarn test && yarn build && yarn tarball && yarn publish dist/*.tgz && git push"
   },
-  "version": "1.9.5"
+  "version": "1.9.5",
+  "dependencies": {
+    "@vitest/coverage-v8": "^0.34.2"
+  }
 }
