--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@aracna/core": "^1.1.41",
     "@aracna/telegram-bot-types": "^1.2.4",
     "@microsoft/api-extractor": "^7.36.4",
+    "@vitest/coverage-v8": "^0.34.2",
     "@vitest/ui": "^0.34.2",
     "dotenv": "^16.3.1",
     "fastify": "^4.21.0",
@@ -23,8 +24,5 @@
     "tarball": "yarn version && cp LICENSE package.json README.md dist/. && cd dist && yarn pack",
     "deploy": "yarn test && yarn build && yarn tarball && yarn publish dist/*.tgz && git push"
   },
-  "version": "1.9.6",
-  "dependencies": {
-    "@vitest/coverage-v8": "^0.34.2"
-  }
+  "version": "1.9.6"
 }
