--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "author": "Dario Sechi",
   "devDependencies": {
-    "@aracna/core": "^1.1.41",
-    "@aracna/telegram-bot-types": "^1.2.4",
-    "@microsoft/api-extractor": "^7.36.4",
-    "@vitest/coverage-v8": "^0.34.2",
-    "@vitest/ui": "^0.34.2",
+    "@aracna/core": "^1.1.73",
+    "@aracna/telegram-bot-types": "^1.2.8",
+    "@microsoft/api-extractor": "^7.39.0",
+    "@types/node": "^20.10.5",
+    "@vitest/coverage-v8": "^1.1.0",
+    "@vitest/ui": "^1.1.0",
     "dotenv": "^16.3.1",
-    "fastify": "^4.21.0",
-    "typescript": "^5.1.6",
-    "vitest": "^0.34.2"
+    "fastify": "^4.25.1",
+    "typescript": "^5.3.3",
+    "vitest": "^1.1.0"
   },
   "license": "MIT",
   "main": "index.js",
