--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "author": "Dario Sechi",
   "devDependencies": {
-    "@aracna/core": "^1.1.75",
-    "@aracna/telegram-bot-types": "^1.2.9",
+    "@aracna/core": "^1.1.77",
+    "@aracna/telegram-bot-types": "^1.2.10",
     "@microsoft/api-extractor": "^7.39.0",
     "@types/node": "^20.10.5",
     "@vitest/coverage-v8": "^1.1.0",
@@ -11,6 +11,10 @@
     "fastify": "^4.25.1",
     "typescript": "^5.3.3",
     "vitest": "^1.1.0"
+  },
+  "engines": {
+    "node": ">=16",
+    "pnpm": ">=8"
   },
   "license": "MIT",
   "main": "index.js",
