--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.organization=aracna
 sonar.projectKey=aracna_telegram-bot
 
+sonar.exclusions=src/definitions/**/*,src/loggers/**/*
 sonar.inclusions=src/**/*
 sonar.test.inclusions=tests/**/*
 
