--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "Dario Sechi",
   "devDependencies": {
-    "@aracna/core": "^1.1.83",
+    "@aracna/core": "^1.1.87",
     "@aracna/telegram-bot-types": "^1.2.14",
     "@microsoft/api-extractor": "^7.47.5",
     "@types/node": "^22.2.0",
@@ -9,6 +9,7 @@
     "@vitest/ui": "^2.0.5",
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
+    "sharp": "^0.33.5",
     "typescript": "^5.5.4",
     "vitest": "^2.0.5"
   },
