Write all tests and improve certain aspects

--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "author": "Dario Sechi",
   "devDependencies": {
-    "@aracna/core": "^1.1.89",
+    "@aracna/core": "^1.1.90",
     "@aracna/telegram-bot-types": "^1.2.14",
+    "@fastify/multipart": "^8.3.0",
     "@microsoft/api-extractor": "^7.47.5",
+    "@ngrok/ngrok": "^1.4.1",
     "@types/node": "^22.2.0",
     "@vitest/coverage-v8": "^2.0.5",
     "@vitest/ui": "^2.0.5",
@@ -17,6 +19,11 @@
     "node": ">=16",
     "pnpm": ">=8"
   },
+  "exports": {
+    "import": "./index.js",
+    "require": "./index.js",
+    "types": "./index.d.ts"
+  },
   "license": "MIT",
   "main": "index.js",
   "name": "@aracna/telegram-bot",
@@ -28,6 +35,7 @@
   "publishConfig": {
     "directory": "dist"
   },
+  "repository": "https://github.com/aracna/telegram-bot",
   "scripts": {
     "build": "rm -rf dist && pnpm tsc && pnpm api-extractor run --local",
     "prepublish": "pnpm test && pnpm build && cp LICENSE package.json README.md dist",
