--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
   "author": "Dario Sechi",
   "devDependencies": {
-    "@aracna/core": "^1.1.92",
-    "@aracna/telegram-bot-types": "^1.2.14",
-    "@fastify/multipart": "^9.0.1",
-    "@microsoft/api-extractor": "^7.47.9",
+    "@aracna/core": "^1.1.95",
+    "@aracna/telegram-bot-types": "^1.2.15",
+    "@fastify/multipart": "^9.0.3",
+    "@microsoft/api-extractor": "^7.52.2",
     "@ngrok/ngrok": "^1.4.1",
-    "@types/node": "^22.7.5",
-    "@vitest/coverage-v8": "^2.1.2",
-    "@vitest/ui": "^2.1.2",
-    "dotenv": "^16.4.5",
-    "fastify": "^5.0.0",
+    "@types/node": "^22.14.0",
+    "@vitest/coverage-v8": "^3.1.1",
+    "@vitest/ui": "^3.1.1",
+    "dotenv": "^16.4.7",
+    "fastify": "^5.2.2",
     "sharp": "^0.33.5",
-    "typescript": "^5.6.3",
-    "vitest": "^2.1.2"
+    "typescript": "^5.8.2",
+    "vitest": "^3.1.1"
   },
   "engines": {
     "node": ">=16",
     "pnpm": ">=8"
   },
   "exports": {
+    "types": "./index.d.ts",
     "import": "./index.js",
-    "require": "./index.js",
-    "types": "./index.d.ts"
+    "require": "./index.js"
   },
   "license": "MIT",
   "main": "index.js",
@@ -35,10 +35,10 @@
   "publishConfig": {
     "directory": "dist"
   },
-  "repository": "https://github.com/aracna/telegram-bot",
+  "repository": "https://github.com/queelag/telegram-bot",
   "scripts": {
-    "build": "rm -rf dist && pnpm tsc && pnpm api-extractor run --local",
-    "prepublish": "pnpm test && pnpm build && cp LICENSE package.json README.md dist",
+    "build": "node scripts/build.mjs && pnpm tsc && pnpm api-extractor run --local",
+    "prepublish": "pnpm test && pnpm build && node scripts/pre-publish.mjs",
     "test": "vitest run"
   },
   "types": "index.d.ts",
